# sv_raid_tool

./: Cargo.toml  LICENSE_MIT  README.md  index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
.github/workflows/: pages.yml
data/: raid_pokemon_list.txt
src/: lib.rs
src/components/: header.rs  mod.rs  output.rs
src/components/input/: mod.rs  name.rs  search.rs  star.rs  type_.rs
src/components/tool/: _tool_input.rs  mod.rs  tool_input.rs  tool_output.rs
src/res/: color.rs  mod.rs  type_.rs
