[package]
name = "wasm-raid"
version = "0.1.0"
authors = ["leis <uthmar33@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
sv_raid = { git = "https://github.com/leis9631120/sv_raid" }
serde-wasm-bindgen = "0.4.5"
yew = { version = "0.20.0", features = ["csr"] }
log = "0.4.17"
wasm-logger = "0.2.0"
wasm-bindgen-test = "0.3.13"
wana_kana = "2.1.0"
once_cell = "1.16.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
    "Window",
    "Document",
    "HtmlCollection",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlLiElement",
    "Element",
    "InputEvent",
    "CompositionEvent"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
